Fixed hbs serving issue

--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -46,7 +46,7 @@
         </header>
 
         <!-- CTA Back to Main -->
-        <a class="btn-round btn-round--back" href="./main.html">
+        <a class="btn-round btn-round--back" href="/main">
             <span class="btn-round__icon">
                 <svg width="8px" height="12px" viewBox="0 0 8 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <!-- Generator: Sketch 53.2 (72643) - https://sketchapp.com -->
