Deleted specified url for dynamic one and changed location assign from abc.html to /abc

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,7 +9,7 @@
     <script>
         const token = localStorage.getItem('x-auth')
         if (token) {
-            location.assign('main.html')
+            location.assign('/main')
         }
     </script>
 </head>
