--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -9,7 +9,7 @@
     <script>
         const token = localStorage.getItem('x-auth')
         if (!token) {
-            location.assign('index.html')
+            location.assign('/index')
         }
     </script>
 </head>
