--- a/views/main.hbs
+++ b/views/main.hbs
@@ -11,7 +11,7 @@
     <script>
         const token = localStorage.getItem('x-auth')
             if (!token) {
-                location.assign('index.html')
+                location.assign('/index')
             }
     </script>
 </head>
